2001-10-21  Akim Demaille  <akim@epita.fr>

	* m4/regex.m4: Use AC_LIBOBJ.
	Require 2.50, and use AC_LIBSOURCES freely.
	* tests/asm.tests: Formatting changes.
	Exercise AM_PROG_AS.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/install.test: This test is an empty shell, do not run
	automake.
	* tests/Makefile.am (TESTS): Don't run it.
	* tests/defs (ACLOCAL): When using gettext, pass in the installed
	aclocaldir.
	* tests/subdircond.test (SUBDIRS): AM_GNU_GETTEXT needs automake
	--add--missing.
	* tests/obsolete2.test: Remove, merged into...
	* tests/obsolete.test: here.
	Both aclocal and automake should complain.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (scan_autoconf_traces): Don't recognize AC_SUBSTs
	for symbols which cannot be Make macro names.
	(scan_one_autoconf_file): `$here' is new.
	Use it consistently instead of `1' to remember a token was seen.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/subdircond.test: Requires gettext.
	* tests/libobj.test, tests/libobj10.test, tests/libobj2.test,
	* tests/libobj6.test, tests/libobj9.test, tests/libtool.test,
	* tests/libtool2.test, tests/ltdeps.test, tests/ltlibobjs.test,
	* tests/nolink.test, tests/obsolete.test, tests/pr72.test,
	* tests/sinclude.test, tests/subdircond.test, tests/subobj4.test:
	Produce valid configure.in, use aclocal appropriately, declare
	when libtool is required.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* m4/lex.m4: Don't run AC_DECL_YYTEXT, Autoconf does.
	* automake.texi (Macros, Yacc and Lex): Adjust.
	* automake.in ($seen_decl_yytext): Rename as...
	($seen_prog_lex): this.
	(&scan_autoconf_traces): Add AC_PROG_LEX support.
	(&scan_one_autoconf_file, &lang_lex_finish): Adjust.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_autoconf_traces): Add support for
	AM_PATH_LISPDIR and AM_PATH_PYTHON.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* tests/defs (ACLOCAL): Point to the installed aclocaldir is
	libtool is required.